# ai-invention-7ff1bb-nonlinear-diffusion-signatures-breaking-

./: README.md
dataset_iter1_1_wl_equivalent/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter1_1_wl_equivalent/src/: build_dataset.py  data.py  data_out.json  data_out_mini.json  data_out_preview.json  full_data_out.json  mini_data_out.json  preview_data_out.json
dataset_iter1_nds_evaluation/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter1_nds_evaluation/src/: data.py  mini_data_out.json  preview_data_out.json
dataset_iter4_non_vertex_tran/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter4_non_vertex_tran/src/: assemble_final.py  build_brec.py  build_cfi.py  build_dataset.py  data.py  full_data_out.json  gen_more_cfi.py  mini_data_out.json  preview_data_out.json
evaluation_iter6_comprehensive_f/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_comprehensive_f/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_comprehensive_f/src/nds_hypothesis_evaluation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiment_iter2_nds_distinguish/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_nds_distinguish/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_nds_scalability/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_nds_scalability/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json
experiment_iter5_nds_vs_linear_d/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter6_definitive_gnn/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
paper_latex/: references.bib
paper_latex/workspace/: paper.tex
(+33 files in other folders)
