[project]
name = "nds_hypothesis_evaluation"
version = "0.1.0"
description = "Comprehensive Final NDS Hypothesis Evaluation across 8 experiments"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "scipy>=1.11.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
