[project]
name = "nds-ablation"
version = "0.1.0"
description = "Nonlinear Diffusion Signatures ablation study on 1-WL-equivalent graph pairs"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "scipy>=1.11.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
